--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
+    "react-hot-toast": "^2.4.0",
     "sonner": "^2.0.3"
   },
   "devDependencies": {
