--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "framer-motion": "^12.16.0",
     "lexical": "^0.31.2",
     "lucide-react": "^0.511.0",
-    "react": "^19.1.0",
+    "react": "18.2.0",
     "react-bootstrap": "^2.10.10",
     "react-chartjs-2": "^5.3.0",
     "react-confetti": "^6.4.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.296",
@@ -49,8 +49,8 @@
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@tailwindcss/postcss": "^4.1.8",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "@types/react": "^18.2.41",
+    "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
